--- a/roughversion.html
+++ b/roughversion.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="mystyle.css">
-    <!-- <script src="script.js" charset="utf-8"></script> -->
   <script src="script.js" charset="utf-8"></script>
   </head>
-  <body onload="launch();">
-    <canvas id="canvas" width="600" height="450"></canvas>
+  <body onload="Launch();">
+    <canvas id="canvas" width="610" height="460"></canvas>
   </body>
 </html>
